--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
         <section>
             <div class="search">
-                <button> Search flights </button>
+                <button> <a class="search-text" href="https://book.jetblue.com/shop/search/#/" target="_blank"> Search flights </a> </button> 
             </div>
         </section>
     </main>
