Formatted pages of document

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         </section>
         <section>
             <div class="search">
-                <button> <a class="search-text" href="https://book.jetblue.com/shop/search/#/" target="_blank"> Search flights </a> </button> 
+                <button> <a class="search-text" href="https://book.jetblue.com/shop/search/#/" target="_blank"> Search
+                        flights </a> </button>
             </div>
         </section>
     </main>
